# Copyright (C) 2017-2024 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

December, 19, 2024, AnnotSV version 3.4.5
	- Fix a bug to set start position when converting from 0-based to 1-based format in some rare special cases (issue 266)
	- Fix a bug concerning Mouse annotations (issue 257)

September, 05, 2024, AnnotSV version 3.4.4
	- Temporary fix for issues #239 and #250 (wrong PRDM10 line in the GenCC file)
	  => Code to be removed after updating annotations

August, 29, 2024, AnnotSV version 3.4.3
	- New definition of alias gene symbols used in OMIM annotation files. 
	  Keep only aliases found with the NCBI_gene_ID and validated with genomic locations
	- Add a new check for the variantconvert configuration (issue 246)
	- Fix a bug in the AnnotSV_ID setting when POS (e.g. 1) is contained in CHROM (e.g. 1)

May, 14, 2024, AnnotSV version 3.4.2
	- Fix a bug when setting the cytoband annotation for large SV (issue 234)
	- Update the mm39 repeat annotations (issue 225)

May, 03, 2024, AnnotSV version 3.4.1
	- Update of the variantconvert distribution (2.0.1 installed)
	  Add of the "-variantconvertMode" option (to choose the variantconvert conversion mode)
	- Mouse annotation update (Add GRCm39/mm39 annotations)
	- Remove typos in the ranking explanation
	- Check the user bedtools version
	- Restricts the number of RE_gene features to 50, RE with "PhenoGenius specificity = "A" or Exomiser gene score > 0.7" are displayed first.
	- Integrate all the gene symbols for OMIM morbid annotations
	- Improve the creation of the benign dataset (gnomAD, 1000g and HPRC)
	- Add log files for the PhenoGenius install

February, 16, 2024, AnnotSV version 3.4
	- Human annotation update