@@ -39,7 +39,7 @@ OPTIONS
                                 Default = "" (e.g.: "HP:0001156,HP:0001363,HP:0011304")
 
 -includeCI:                     To expand the "start" and "end" SV positions with the VCF confidence intervals (CIPOS, CIEND) around the breakpoints
-				AnnotSV keeps the CIPOS and CIEND information that comes first in the INFO column (even if the fields are CIPOS95, CIEND95 or tool_CIPOS, tool_CIEND).
+                                AnnotSV keeps the CIPOS and CIEND information that comes first in the INFO column (even if the fields are CIPOS95, CIEND95 or tool_CIPOS, tool_CIEND).
                                 Values: 1 (default) or 0
 
 -metrics:                       Changing numerical values from frequencies to us or fr metrics (e.g. 0.2 or 0,2)
@@ -47,6 +47,9 @@ OPTIONS
 
 -minTotalNumber:                Minimum number of individuals tested to consider a benign SV for the ranking
                                 Range values: [100-1000], default = 500
+
+-missingGTinSamplesid:          To report sample IDs with missing alleles in the GT field (./. or .|.) in the "Samples_ID" output field
+                                Values: 1 (default) or 0
 
 -outputDir:                     Output path name
 
