@@ -10,6 +10,9 @@
 
 For more details, please see the README file.
 
+February, 27, 2025, AnnotSV version 
+	- Add of the "-missingGTinSamplesid" option (to report or not sample IDs with missing alleles in the GT field (./. or .|.) in the "Samples_ID" output field)
+
 December, 19, 2024, AnnotSV version 3.4.5
 	- Fix a bug to set start position when converting from 0-based to 1-based format in some rare special cases (issue 266)
 	- Fix a bug concerning Mouse annotations (issue 257)
